--- a/client/css/style.css
+++ b/client/css/style.css
@@ -76,6 +76,10 @@ body {
     color: #A666A8;    
 }
 
+.action.subscribed {
+    color: #cc932b;
+}
+
 @keyframes pop-in-out {
   0%   { transform: scale(1); opacity: .9 }
   1%   { transform: scale(1.1); opacity: 1; }
