subscribers api updates

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -17,6 +17,7 @@ body {
     font-family: bignoodletooobliqueitalic;
     font-weight: normal;
     font-style: italic;
+    background-color: #121212;
 }
 
 .stream-ending {
